--- a/PersonelAPI/appsettings.json
+++ b/PersonelAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PersonelConnection": "Server.;Database=test;Trusted_Connection=True"
+    "PersonelConnection": "Server=.;Database=test;User Id=sa;Password=1234"
   },
   "AllowedHosts": "*"
 }
